force-app/main/default/objects/apsona__apsona_item__c/apsona__apsona_item__c.object-meta.xml
<CustomObject>
    <description>Apsona-specific content</description>
    <label>Apsona item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apsona items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>