force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__Checkbox_02__c.field-meta.xml
<CustomField>
    <fullName>apsona__Checkbox_02__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox 02</label>
    <type>Checkbox</type>
</CustomField>