force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__Content3__c.field-meta.xml
<CustomField>
    <fullName>apsona__Content3__c</fullName>
    <label>Content3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>