force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__Date_00__c.field-meta.xml
<CustomField>
    <fullName>apsona__Date_00__c</fullName>
    <label>Date_00</label>
    <type>Date</type>
</CustomField>