force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__Date_01__c.field-meta.xml
<CustomField>
    <fullName>apsona__Date_01__c</fullName>
    <label>Date_01</label>
    <type>Date</type>
</CustomField>