force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__Date_02__c.field-meta.xml
<CustomField>
    <fullName>apsona__Date_02__c</fullName>
    <label>Date_02</label>
    <type>Date</type>
</CustomField>