force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__Description__c.field-meta.xml
<CustomField>
    <fullName>apsona__Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>