force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__Entity_name__c.field-meta.xml
<CustomField>
    <fullName>apsona__Entity_name__c</fullName>
    <label>Entity name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>