force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__Item_type__c.field-meta.xml
<CustomField>
    <fullName>apsona__Item_type__c</fullName>
    <label>Item type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>