force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__Number_01__c.field-meta.xml
<CustomField>
    <fullName>apsona__Number_01__c</fullName>
    <label>Number_01</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>