force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__String_00__c.field-meta.xml
<CustomField>
    <fullName>apsona__String_00__c</fullName>
    <label>String 00</label>
    <length>255</length>
    <type>Text</type>
</CustomField>