force-app/main/default/objects/apsona__apsona_item__c/fields/apsona__String_02__c.field-meta.xml
<CustomField>
    <fullName>apsona__String_02__c</fullName>
    <label>String 02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>