force-app/main/default/objects/apsona__apsona_item__c/fields/apsona_dedup__Dedup_Enabled__c.field-meta.xml
<CustomField>
    <fullName>apsona_dedup__Dedup_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedup Enabled</label>
    <type>Checkbox</type>
</CustomField>