force-app/main/default/objects/apsona__apsona_item__c/listViews/apsona__All.listView-meta.xml
<ListView>
    <fullName>apsona__All</fullName>
    <columns>NAME</columns>
    <columns>apsona__Content__c</columns>
    <columns>apsona__Description__c</columns>
    <columns>apsona__Entity_name__c</columns>
    <columns>apsona__Item_type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>